Fix sidebar z-index

--- a/src/scss/modules/navs.scss
+++ b/src/scss/modules/navs.scss
@@ -1,6 +1,6 @@
 .navbar {
   position: fixed;
-  z-index: 1000;
+  z-index: 500;
   top: 0;
   display: flex;
   width: 100vw;
@@ -136,7 +136,7 @@
 .sidebar {
   position: fixed;
 
-  z-index: 100;
+  z-index: 1000;
   top: 0;
   left: 0;
   display: flex;
